--- a/less/home-page.less
+++ b/less/home-page.less
@@ -61,6 +61,7 @@
     @media @phone {
       flex-flow: column-reverse;
       padding: 20px 24px;
+      margin-top: 25px;
     }
 
     .walk-text {
